compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__todo__as_expression.snap
---
source: compiler-core/src/javascript/tests/todo.rs
expression: "\nfn go(f) {\n  let boop = todo as \"I should do this\"\n  f(todo as \"Boom\")\n}\n"
---
----- SOURCE CODE

fn go(f) {
  let boop = todo as "I should do this"
  f(todo as "Boom")
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go(f) {
  let boop = (() => {
    throw makeError("todo", "my/mod", 3, "go", "I should do this", {})
  })();
  return f((() => { throw makeError("todo", "my/mod", 4, "go", "Boom", {}) })());
}
