compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__todo__with_message.snap
---
source: compiler-core/src/javascript/tests/todo.rs
assertion_line: 27
expression: "\nfn go() {\n  todo as \"I should do this\"\n}\n"
---
----- SOURCE CODE

fn go() {
  todo as "I should do this"
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go() {
  throw makeError("todo", "my/mod", 3, "go", "I should do this", {})
}
