compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__todo__with_message_expr.snap
---
source: compiler-core/src/javascript/tests/todo.rs
expression: "\nfn go() {\n  let x = \"I should \" ++ \"do this\"\n  todo as x\n}\n"
---
import { makeError } from "../rakun.mjs";

function go() {
  let x = "I should " + "do this";
  throw makeError("todo", "my/mod", 4, "go", x, {})
}
