compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__todo__without_message.snap
---
source: compiler-core/src/javascript/tests/todo.rs
assertion_line: 5
expression: "\nfn go() {\n    todo\n}\n"
---
----- SOURCE CODE

fn go() {
    todo
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go() {
  throw makeError(
    "todo",
    "my/mod",
    3,
    "go",
    "`todo` expression evaluated. This code has not yet been implemented.",
    {}
  )
}
